# backstab-vita

./: CMakeLists.txt  README.md
data/: control0  loading_menu_fixed.bsprite  loading_menu_fixed.pvr  splash_fixed.pvr
lib/FalsoJNI/: FalsoJNI.h
lib/fios/: fios.c  fios.h
lib/kubridge/: CMakeLists.txt  exports.yml  kubridge.h
lib/kubridge/src/: exceptions.S  exceptions.c  exceptions_bootstrap.S  internal.h  mprotect.c
lib/libc_bridge/: libc_bridge.h  nids.yml
lib/so_util/: so_util.c  so_util.h
livearea/: template.xml
loader/: audioPlayer.c  dynlib.c  falsojni_impl.c  main.c  patch.c
loader/configurator/: main.cpp
loader/patch/: controls.c  graphics.c  splash.c
loader/reimpl/: controls.c  controls.h  io.c  pthr.c  pthr.h
loader/utils/: glutil.c  glutil.h  init.c  settings.c  settings.h  utils.c
shaders/: translate.py
shaders/cg/: 5A15E3B9880E4A31D85F2A1C61D0D5BEC4E2FE70.cg  E1CAB39F00F9FDAC9E57B600A3E721A888EFADF6.cg
